fixed spacing on profile component

--- a/src/components/Rules/rules.css
+++ b/src/components/Rules/rules.css
@@ -7,7 +7,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 60%;  
+    /* max-width: 80%;   */
 
 }
 
@@ -22,7 +22,7 @@
 }
 
 .Rules h2 {
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 
